package it.unibas.taskscheduler.modello;

public enum EStatoTask {
    IN_ATTESA,
    PRONTO,
    IN_ESECUZIONE,
    COMPLETATO,
    FALLITO,
    ANNULLATO;
}
