package it.unibas.taskscheduler.modello;

public enum EStatoWorkflow {
    IN_ESECUZIONE,
    COMPLETATO,
    FALLITO,
    IN_PAUSA,
    ANNULLATO;
}
