package it.unibas.taskscheduler.persistenza;

import it.unibas.taskscheduler.modello.Task;
import java.util.Optional;

public interface IRepositoryTask {

    public void persist(Task task);

    public void aggiornaStato(Task task);

    public Optional<Task> findByIdOptional(Long id);
}
